--- a/shots/index.html
+++ b/shots/index.html
@@ -14,6 +14,27 @@
     <link rel="preload" href="https://cdn.dribbble.com/assets/neue-haas-grotesk/NeueHaasGrotTextRound-65Medium-Web-741c8c70e5c90808119c701483ca7362baff5ae482c823718406bbb1e31d9143.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="https://cdn.dribbble.com/assets/neue-haas-grotesk/NeueHaasGrotTextRound-75Bold-Web-f2ff2f34217e3fdab82c30ef689f5be3fb86a8e4218a1906a9399d0354a95d45.woff2" as="font" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://0gaurav4.github.io/webz/assets/packs/css/108-4174af6f.chunk.css">
+    <link rel="stylesheet" href="https://0gaurav4.github.io/webz/assets/packs/css/13-6064a627.chunk.css">
+    <link rel="stylesheet" href="https://0gaurav4.github.io/webz/assets/packs/css/138-d900128f.chunk.css">
+    <link rel="stylesheet" href="https://0gaurav4.github.io/webz/assets/packs/css/144-e72d99ce.chunk.css">
+    <link rel="stylesheet" href="https://0gaurav4.github.io/webz/assets/packs/css/8-78123f4d.chunk.css">
+
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/0.d4ba73db19a2d50e4583.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/1.f0fe1db13bbdcbfb0a0d.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/108.dae3ed7d703da16beb1f.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/11.77e3419991b85990a8bb.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/128.89d792f5f6a6cd6e2a33.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/13.5e7d821a47c78b477395.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/138.c98f9a70974c786c1856.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/14.77bd2a30b0c08c44e6fb.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/144.632bcb4ea79bd37bdb31.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/15.2a27e830b24fe5cf10c7.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/155.fa3b5a82219053aee3f2.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/165.c0e34f852d9aed682eae.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/6.b85153d70d0cddee1d16.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/7.9a4ace3ca80c05dadd5e.js"></script>
+    <script src="https://0gaurav4.github.io/webz/assets/packs/js/8.3285f6684994c005dccb.js"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -195,7 +216,7 @@
       <div class="shot-user-avatar shot-user-avatar-large-screens">
         <a class="hoverable url" rel="contact" title="Sudhanshu" href="/imlahmacun"><picture>
 
-  <img class="photo" alt="Sudhanshu" width="48" height="48" src="/assets/icons/dribble-one-five/unnamed.jpg" />
+  <img class="photo" alt="Sudhanshu" width="48" height="48" src="https://0gaurav4.github.io/webz/assets/icons/dribble-one-five/unnamed.jpg" />
 </picture>
 </a>
           <div class="team-avatar"><a class="hoverable url" rel="contact" title="One Week Wonders" href="/OWWStudio"><picture>
@@ -211,7 +232,7 @@
           <div class="shot-user-avatar shot-user-avatar-small-screens">
             <a class="hoverable url" rel="contact" title="Sudhanshu" href="/imlahmacun"><picture>
 
-  <img class="photo" alt="Sudhanshu" width="48" height="48" src="/assets/icons/dribble-one-five/unnamed.jpg" />
+  <img class="photo" alt="Sudhanshu" width="48" height="48" src="https://0gaurav4.github.io/webz/assets/icons/dribble-one-five/unnamed.jpg" />
 </picture>
 </a>
               <div class="team-avatar"><a class="hoverable url" rel="contact" title="One Week Wonders" href="/OWWStudio"><picture>
